RESOLVED FIXED303375
[GTK] Regression: inspector/debugger/async-stack-trace-basic.html and inspector/debugger/async-stack-trace-truncate.html are crashing
https://bugs.webkit.org/show_bug.cgi?id=303375
Summary [GTK] Regression: inspector/debugger/async-stack-trace-basic.html and inspect...
Claudio Saavedra
Reported 2025-12-02 02:37:38 PST
They are crashing most of the times, I can't pinpoint the exact commit where it started crashing, but it is between 302018@main and 302028@main: https://results.webkit.org/?suite=layout-tests&suite=layout-tests&test=inspector%2Fdebugger%2Fasync-stack-trace-basic.html&test=inspector%2Fdebugger%2Fasync-stack-trace-truncate.html&platform=GTK Crash with assertions enabled (debug): STDERR: ASSERTION FAILED: !m_isUpdatingRendering STDERR: ../../../Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp(184) : void WebKit::LayerTreeHost::updateRendering() STDERR: 1 0x7f35eb097361 WebKit::LayerTreeHost::updateRendering() STDERR: 2 0x7f35eb097945 WebKit::LayerTreeHost::renderingUpdateRunLoopObserverFired() STDERR: 3 0x7f35eb096865 operator() STDERR: 4 0x7f35eb0bcb34 call STDERR: 5 0x7f35e84a1fad WTF::Function<void ()>::operator()() const STDERR: 6 0x7f35f120df3b WebCore::RunLoopObserver::runLoopObserverFired() STDERR: 7 0x7f35f137ab74 operator() STDERR: 8 0x7f35f13867a4 call STDERR: 9 0x7f35d8dff549 WTF::Function<WTF::ActivityObserver::NotifyResult ()>::operator()() const STDERR: 10 0x7f35d8dfd868 WTF::ActivityObserver::notify() const STDERR: 11 0x7f35d8dfeae7 WTF::RunLoop::notifyActivity(WTF::RunLoop::Activity) STDERR: 12 0x7f35d8dfe121 WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock) STDERR: 13 0x7f35d8dfe4df WTF::RunLoop::cycle(unsigned int) STDERR: 14 0x7f35f0823916 WebCore::PageDebugger::platformShouldContinueRunningEventLoopWhilePaused() STDERR: 15 0x7f35f08234cc WebCore::PageDebugger::runEventLoopWhilePausedInternal() STDERR: 16 0x7f35f0823472 WebCore::PageDebugger::runEventLoopWhilePaused() STDERR: 17 0x7f35d6a36b34 JSC::Debugger::handlePause(JSC::JSGlobalObject*) STDERR: 18 0x7f35d6a36848 JSC::Debugger::pauseIfNeeded(JSC::JSGlobalObject*) STDERR: 19 0x7f35d6a3595c JSC::Debugger::updateCallFrame(JSC::JSGlobalObject*, JSC::CallFrame*, JSC::Debugger::CallFrameUpdateAction) STDERR: 20 0x7f35d6a37e4b JSC::Debugger::didReachDebuggerStatement(JSC::CallFrame*) STDERR: 21 0x7f35d7900332 JSC::Interpreter::debug(JSC::CallFrame*, JSC::DebugHookType, JSC::JSValue) STDERR: 22 0x7f35d7add2ae llint_slow_path_debug STDERR: 23 0x7f35d60d15f3 llint_op_debug Crash without assertions (Release): Thread 1 (Thread 0x7f35062f8440 (LWP 2393979)): #0 0x00007f350fbfde0f in WTFCrash () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #1 0x00007f3513d21b35 in WTF::Detail::CallableWrapper<WebKit::LayerTreeHost::LayerTreeHost(WebKit::WebPage&)::{lambda()#1}, void>::call() () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #2 0x00007f350fd35e1f in WTF::RunLoop::notifyActivity(WTF::RunLoop::Activity) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #3 0x00007f350fd36762 in WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #4 0x00007f350fd3696e in WTF::RunLoop::cycle(unsigned int) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #5 0x00007f3515cafef7 in WebCore::PageDebugger::runEventLoopWhilePaused() () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #6 0x00007f350e61f115 in JSC::Debugger::handlePause(JSC::JSGlobalObject*) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #7 0x00007f350e6289fb in JSC::Debugger::pauseIfNeeded(JSC::JSGlobalObject*) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #8 0x00007f350e628f3b in JSC::Debugger::updateCallFrame(JSC::JSGlobalObject*, JSC::CallFrame*, JSC::Debugger::CallFrameUpdateAction) [clone .part.0] () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #9 0x00007f350e6292d2 in JSC::Debugger::didReachDebuggerStatement(JSC::CallFrame*) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #10 0x00007f350ee6fea0 in JSC::Interpreter::debug(JSC::CallFrame*, JSC::DebugHookType, JSC::JSValue) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #11 0x00007f350f03ffa1 in llint_slow_path_debug () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #12 0x00007f350e11ccc1 in llint_op_debug () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #13 0x0000000000000000 in ??? ()
Attachments
Claudio Saavedra
Comment 1 2025-12-02 02:46:22 PST
Fujii Hironori
Comment 2 2026-01-09 03:39:28 PST
EWS
Comment 3 2026-01-19 15:23:04 PST
Committed 305838@main (7216ac5e37b8): <https://commits.webkit.org/305838@main> Reviewed commits have been landed. Closing PR #56326 and removing active labels.
Fujii Hironori
Comment 4 2026-01-20 16:01:45 PST
Oh, no. Still failing. Bug, it became flaky crash. Reopened. https://results.webkit.org/?suite=layout-tests&test=inspector%2Fdebugger%2Fasync-stack-trace-truncate.html&style=debug&platform=GTK&platform=WPE https://build.webkit.org/results/GTK-Linux-64-bit-Debug-Tests/305844@main%20(17908)/inspector/debugger/async-stack-trace-truncate-stderr.txt VM 0x7f2d4a400000 on pid 3734277 received NeedDebuggerBreak trap ASSERTION FAILED: !m_isUpdatingRendering ../../../Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp(187) : void WebKit::LayerTreeHost::updateRendering() 1 0x7f2d7601224d WebKit::LayerTreeHost::updateRendering() 2 0x7f2d7601275c WebKit::LayerTreeHost::renderingUpdateRunLoopObserverFired() 3 0x7f2d76011743 operator() 4 0x7f2d7603a460 call 5 0x7f2d73247893 WTF::Function<void ()>::operator()() const 6 0x7f2d7c428d33 WebCore::RunLoopObserver::runLoopObserverFired() 7 0x7f2d7c5a6a1f operator() 8 0x7f2d7c5b04d2 call 9 0x7f2d61785e6f WTF::Function<void ()>::operator()() const 10 0x7f2d635dcecc WTF::ActivityObserver::notify() 11 0x7f2d635de577 WTF::RunLoop::notifyActivity(WTF::RunLoop::Activity) 12 0x7f2d635ddbb1 WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock) 13 0x7f2d635ddf6f WTF::RunLoop::cycle(unsigned int) 14 0x7f2d7b9b9ba6 WebCore::PageDebugger::platformShouldContinueRunningEventLoopWhilePaused() 15 0x7f2d7b9b9736 WebCore::PageDebugger::runEventLoopWhilePausedInternal() 16 0x7f2d7b9b96dc WebCore::PageDebugger::runEventLoopWhilePaused() 17 0x7f2d611155a8 JSC::Debugger::handlePause(JSC::JSGlobalObject*) 18 0x7f2d611152bc JSC::Debugger::pauseIfNeeded(JSC::JSGlobalObject*) 19 0x7f2d611143c6 JSC::Debugger::updateCallFrame(JSC::JSGlobalObject*, JSC::CallFrame*, JSC::Debugger::CallFrameUpdateAction) 20 0x7f2d611168bf JSC::Debugger::didReachDebuggerStatement(JSC::CallFrame*) 21 0x7f2d61ffce8c JSC::Interpreter::debug(JSC::CallFrame*, JSC::DebugHookType, JSC::JSValue) 22 0x7f2d621def0e llint_slow_path_debug 23 0x7f2d6078a742 llint_op_debug WebKitWebProcess terminated (pid 3734277) for reason: crash
Fujii Hironori
Comment 5 2026-01-22 16:55:31 PST
EWS
Comment 6 2026-01-28 02:14:51 PST
Committed 306341@main (dc0b72ef27a7): <https://commits.webkit.org/306341@main> Reviewed commits have been landed. Closing PR #57089 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.