[CoordinatedGraphics] LayerTreeHost: inspector/debugger/async-stack-trace-basic.html and inspector/debugger/async-stack-trace-truncate.html are crashing https://bugs.webkit.org/show_bug.cgi?id=303375

Reviewed by Carlos Garcia Campos.

inspector/debugger/async-stack-trace-basic.html and
inspector/debugger/async-stack-trace-truncate.html were crashing for GTK port
due to a release assertion failure of reentrant of
LayerTreeHost::updateRendering().

Call invalidateRenderingUpdateRunLoopObserver() first in updateRendering().

* LayoutTests/platform/gtk/TestExpectations:
* Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/LayerTreeHost.cpp:
(WebKit::LayerTreeHost::updateRendering):
(WebKit::LayerTreeHost::updateRenderingWithForcedRepaint):
(WebKit::LayerTreeHost::sizeDidChange):

Canonical link: https://commits.webkit.org/305838@main